Add release build command

--- a/api-gateway/Makefile
+++ b/api-gateway/Makefile
@@ -4,5 +4,8 @@ run:
 build:
 	go build -o bin/app ./cmd/service
 
+build-release:
+	CGO_ENABLED=0 go build -tags netgo -ldflags "-s -w" -o bin/app ./cmd/service
+
 test:
 	go test ./...
