--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,16 +42,16 @@ jobs:
 
       - name: Set up Docker Compose
         run: |
-          docker-compose -f docker-compose.test.yml up -d test-postgres test-migrations test-app
+          make start-integration-env
 
       - name: Run Integration Tests
         run: |
-          docker-compose -f docker-compose.test.yml run --rm tests
-
+          make run-integration
+          
       - name: Clean up
         if: always()
         run: |
-          docker-compose -f docker-compose.test.yml down
+          make down-integration-env
 
   deploy:
     needs: [unit-tests, integration-tests]
