Add media handler

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ DB_NAME=yourdb
 
 # Application configuration
 APP_PORT=8080
+
+# S3 Storage
+B2_ACCESS_KEY_ID=ваш_application_key_id
+B2_SECRET_ACCESS_KEY=ваш_application_key
+B2_ENDPOINT=s3.us-west-004.backblazeb2.com
+B2_BUCKET_NAME=имя_бакета
+CLOUDFLARE_CDN_DOMAIN=ваш_домен_cloudflare_cdn
