--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database configuration
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
@@ -9,8 +9,15 @@ DB_NAME=yourdb
 APP_PORT=8080
 
 # S3 Storage
-B2_ACCESS_KEY_ID=ваш_application_key_id
-B2_SECRET_ACCESS_KEY=ваш_application_key
-B2_ENDPOINT=s3.us-west-004.backblazeb2.com
-B2_BUCKET_NAME=имя_бакета
-CLOUDFLARE_CDN_DOMAIN=ваш_домен_cloudflare_cdn
+B2_ACCESS_KEY_ID=test_access_key_id
+B2_SECRET_ACCESS_KEY=test_access_key_value
+B2_ENDPOINT=minio:9000
+B2_BUCKET_NAME=test-bucket
+CLOUDFLARE_CDN_DOMAIN=""
+
+# Только для тестов и дебага
+# Заполняется автоматически при запуске дебаг-окружения
+SSL_CERT_FILE=""
+
+# JWT configuration
+JWT_SECRET="test-secret-do-not-use-in-production"
