--- a/.env.debug
+++ b/.env.debug
@@ -14,6 +14,7 @@ B2_SECRET_ACCESS_KEY=test_access_key_value
 B2_ENDPOINT=127.0.0.1:9000
 B2_BUCKET_NAME=test-bucket
 CLOUDFLARE_CDN_DOMAIN=""
+B2_PUBLIC_ENDPOINT=10.0.2.2:9000
 
 # Только для тестов и дебага
 # Заполняется автоматически при запуске дебаг-окружения
