Support sending push notifications

--- a/.env.debug
+++ b/.env.debug
@@ -20,5 +20,7 @@ B2_PUBLIC_ENDPOINT=10.0.2.2:9000
 # Заполняется автоматически при запуске дебаг-окружения
 SSL_CERT_FILE=""
 
+GOOGLE_APPLICATION_CREDENTIALS=""
+
 # JWT configuration
 JWT_SECRET="test-secret-do-not-use-in-production"
