--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          cp .env.example .env
+          cp .env.docker .env
 
       - name: Run Integration Tests
         run: |
