Add max file limit and max concurrent uploads limit

--- a/.env.debug
+++ b/.env.debug
@@ -7,6 +7,8 @@ DB_NAME=yourdb
 
 # Application configuration
 APP_PORT=8080
+MAX_CONCURRENT_UPLOADS=10
+MAX_UPLOAD_SIZE_MB=100
 
 # S3 Storage
 B2_ACCESS_KEY_ID=test_access_key_id
