--- a/.env.tests
+++ b/.env.tests
@@ -1,7 +1,7 @@
 ENV=test
 
 # Database configuration
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
@@ -15,16 +15,13 @@ MAX_UPLOAD_SIZE_MB=100
 # S3 Storage
 B2_ACCESS_KEY_ID=test_access_key_id
 B2_SECRET_ACCESS_KEY=test_access_key_value
-B2_ENDPOINT=127.0.0.1:9000
+B2_ENDPOINT=minio:9000
 B2_BUCKET_NAME=test-bucket
 CLOUDFLARE_CDN_DOMAIN=""
-B2_PUBLIC_ENDPOINT=10.0.2.2:9000
 
 # Только для тестов и дебага
 # Заполняется автоматически при запуске дебаг-окружения
 SSL_CERT_FILE=""
-
-GOOGLE_APPLICATION_CREDENTIALS=""
 
 # JWT configuration
 JWT_SECRET="test-secret-do-not-use-in-production"
