Update frontend url for debug

--- a/.env.debug
+++ b/.env.debug
@@ -28,3 +28,5 @@ GOOGLE_APPLICATION_CREDENTIALS=""
 
 # JWT configuration
 JWT_SECRET="test-secret-do-not-use-in-production"
+
+FRONTEND_URL=https://10.0.2.2:9000
